--- a/src/partials/modal-franchise.html
+++ b/src/partials/modal-franchise.html
@@ -4,23 +4,22 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Franchise</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700&family=Seymour+One&display=swap"
+      rel="stylesheet"
+    />
+    <title>Franchise modal</title>
   </head>
   <body>
-    <div class="modal container" data-modal="3">
-      <!--   Svg иконка для закрытия окна  -->
-      <svg
-        class="modal__cross js-modal-close"
-        xmlns="http://www.w3.org/2000/svg"
-        viewBox="0 0 24 24"
-      >
-        <path
-          d="M23.954 21.03l-9.184-9.095 9.092-9.174-2.832-2.807-9.09 9.179-9.176-9.088-2.81 2.81 9.186 9.105-9.095 9.184 2.81 2.81 9.112-9.192 9.18 9.1z"
-        />
-      </svg>
-      <!-- <p class="modal__title">Заголовок окна 2</p> -->
+    <div class="modal container" data-modal="5">
+      <button type="button" class="modal-close-btn js-modal-close">
+        <svg class="modal-close-btn-icon">
+          <use href="./images/sprite.svg#icon-close-line"></use>
+        </svg>
+      </button>
 
-      <!-- Подложка под модальным окном -->
       <h1 class="modal-title">
         Thank you for your interest in owning an Ice Cream shop
       </h1>
@@ -31,14 +30,16 @@
         fill out the contact information below and we will reach out for
         additional information. We appreciate your patience.
       </p>
+
       <!-- Form modal -->
-      <form class="modal-franchise-form">
-        <label class="modal-franchise-form-label-name">
-          <span class="modal-franchise-form-label-wrapper">
+      <h2 class="visually-hidden">Order form</h2>
+      <form class="modal-send-form">
+        <label class="modal-send-form-label">
+          <span class="modal-send-form-label-wrapper">
             <input
               type="text"
               name="user_name"
-              class="modal-franchise-form-input"
+              class="modal-send-form-input"
               required
               pattern="^[a-zA-Zа-яА-Я]+$"
               minlength="2"
@@ -47,12 +48,12 @@
             />
           </span>
         </label>
-        <label class="modal-franchise-form-label">
-          <span class="modal-franchise-form-label-wrapper">
+        <label class="modal-send-form-label">
+          <span class="modal-send-form-label-wrapper">
             <input
               type="tel"
               name="user_phone"
-              class="modal-franchise-form-input"
+              class="modal-send-form-input"
               required
               pattern="[0-9]{3}[0-9]{3}[0-9]{2}[0-9]{2}"
               title="Input format: xxx-xxx-xx-xx"
@@ -60,27 +61,26 @@
             />
           </span>
         </label>
-        <label class="modal-franchise-form-label">
-          <span class="modal-franchise-form-label-text">Email</span>
-          <span class="modal-franchise-form-label-wrapper">
+        <label class="modal-send-form-label">
+          <span class="modal-send-form-label-wrapper">
             <input
               type="email"
               name="user_email"
-              class="modal-franchise-form-input"
+              class="modal-send-form-input"
               title="mail@example.com"
               placeholder="Email"
             />
           </span>
         </label>
-        <label class="modal-franchise-form-label">
+        <label class="modal-send-form-label">
           <textarea
             name="user_comment"
-            class="modal-franchise-form-textarea"
+            class="modal-send-form-textarea"
             placeholder="Comment"
           ></textarea>
         </label>
 
-        <button type="submit" class="style-button">Submit</button>
+        <button type="submit" class="modal-submit-button">Submit</button>
       </form>
     </div>
 
