--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -14,4 +14,6 @@
 @import'./modal-all';
 @import'./modal-ingredients';
 @import'./modal-product-card';
+@import'./modal-read-more';
+@import'./modal-our-location';
 @import'./modal-franchise';
