--- a/src/partials/modal-ingredients.html
+++ b/src/partials/modal-ingredients.html
@@ -4,12 +4,24 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Ingredients</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700&family=Seymour+One&display=swap"
+      rel="stylesheet"
+    />
+    <title>Modal ingredients</title>
   </head>
   <body>
-    <div class="modal container" data-modal="1">
+    <div class="modal container ingred" data-modal="1">      
+      <button type="button" class="modal-close-btn js-modal-close">
+          <svg class="modal-close-btn-icon">
+            <use href="./images/sprite.svg#icon-close-line"></use>
+          </svg>
+      </button>
+      
       <!--   Svg иконка для закрытия окна  -->
-      <svg
+      <!-- <svg
         class="modal__cross js-modal-close"
         xmlns="http://www.w3.org/2000/svg"
         viewBox="0 0 24 24"
@@ -17,18 +29,27 @@
         <path
           d="M23.954 21.03l-9.184-9.095 9.092-9.174-2.832-2.807-9.09 9.179-9.176-9.088-2.81 2.81 9.186 9.105-9.095 9.184 2.81 2.81 9.112-9.192 9.18 9.1z"
         />
-      </svg>
+      </svg> -->
 
       <h1 class="modal-title">Chololate icecream</h1>
-      <div>
-        <div class="modal-img-container modal-ingredient">
-          <img
+      <!-- <div> -->
+        <!-- <div class="modal-img-container modal-ingredient"> -->
+        <picture>
+          <div class="modal-img-container modal-ingredient">
+            <!-- <source srcset="./images/Product1.webp 1x, ./images/Product1@2x.webp 2x" media="(min-width:1200px)"
+                  type="image/webp">
+            <source srcset="./images/Product1@2x.jpg 2x" media="(min-width:1200px)"> -->
+            <img class="modal-img-product" src="./images/Product1.jpg" alt="Chololate icecream">
+          </div>
+        </picture>
+          
+          <!-- <img
             class="modal-img-product"
             src="./images/Product1.jpg"
             alt="Acecream"
           />
-        </div>
-      </div>
+        </div> -->
+      <!-- </div> -->
       <h2 class="visually-hidden">Nutritional value</h2>
       <ul class="modal-nutritional-value-list">
         <li class="modal-nutritional-value-item">
