--- a/src/sass/_modal-franchise.scss
+++ b/src/sass/_modal-franchise.scss
@@ -14,11 +14,12 @@
 }
 
 .modal-franchise-text {
+  text-align: left;
   font-family: 'Montserrat';
     // font-style: normal;
     // font-weight: 400;
-    font-size: 14px;
-    line-height: 1.4;  
+  font-size: 14px;
+  line-height: 1.4;  
   
-    color: #131313;
+  color: #131313;
 }
