--- a/src/sass/_modal-product-card.scss
+++ b/src/sass/_modal-product-card.scss
@@ -1,12 +1,31 @@
 
-.modal-title{
-  font-family: 'Seymour One';
+.modal.container.ingred {
+  @media screen and (max-width: 767.99px) {
+    padding: 0 28px;
+  }
+
+  @media screen and (min-width: 768px) {
+    padding: 0 40px;
+  }
+}
+
+.modal-title.modal-buy-now {
+  // font-family: 'Seymour One';
     // font-style: normal;
     // font-weight: 400;
+  
+  @media screen and (max-width: 767.99px) {
+    font-size: 16px;
+    line-height: 1.5;
+  }
+  
+  // @media screen and (min-width: 768px) {
+  //   font-size: 20px;
+  //   line-height: 1.4;
+  // }
+  
   font-size: 16px;
   line-height: 1.5;
-  
-  color: #131313;
 }
 
 // .modal-products-form-label-check{
@@ -56,22 +75,19 @@
   border-radius: 15px;
 }
 
-.modal-product1 {  
-  background-color: #FCFCFC;;
-  border: 2px solid #96AF8C;
-  filter: drop-shadow(0px 5px 20px rgba(212, 20, 67, 0.1));
+.modal-product1 {
+  background-color: linear-gradient(0deg, rgba(156, 190, 143, 0.7), rgba(156, 190, 143, 0.7)), #D9D9D9;
+  box-shadow: 0px 5.26027px 19.726px rgba(10, 136, 23, 0.25);
 }
 
 .modal-product2 {
-  background-color: #EFD478;
-  border: 2px solid #EFD478;
-  box-shadow: 0px 5px 20px rgba(212, 20, 67, 0.1);
+  background-color: linear-gradient(0deg, rgba(248, 210, 78, 0.7), rgba(248, 210, 78, 0.7)), #D9D9D9;
+  box-shadow: 0px 5.26027px 19.726px rgba(153, 114, 23, 0.25);
 }
 
 .modal-product3 {
-  background-color: #FCFCFC;
-  border: 2px solid #D6936D;
-  filter: drop-shadow(0px 5px 20px rgba(212, 20, 67, 0.1));    
+  background-color: linear-gradient(0deg, rgba(213, 117, 63, 0.7), rgba(213, 117, 63, 0.7)), #D9D9D9;
+  box-shadow: 0px 5.26027px 19.726px rgba(0, 0, 0, 0.25);
 }
 
 .modal-product-name{
