--- a/src/partials/modal-read-more.html
+++ b/src/partials/modal-read-more.html
@@ -7,16 +7,11 @@
         </svg>
       </button>
       <h2 class="modal-read-title">How it’s made?</h2>
-      <video
-        class="video"
-        src="#"
-        poster="#"
-        width="224"
-        controls
-        autoplay
-        loop
-        preload="auto"
-      ></video>
+      <video class="video" poster="#" width="224" controls>
+        <source src="#" type="video/webm" />
+        <source src="#" type="video/mp4" />
+        <source src="#" type="video/ogg" />
+      </video>
       <p class="modal-read-p">
         Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
         tempor incididunt ut labore et Lorem ipsum dolor sit amet, consectetur
