посилання на кнопки

--- a/src/partials/contacts.html
+++ b/src/partials/contacts.html
@@ -69,18 +69,18 @@
             </li>
         </ul>
         <div class="contacts-buttons-wrapper">
-            <button type="button" class="contacts-btn">
+            <a href=""><button type="button" class="contacts-btn">
                 Our Locations
                 <svg width="12" height="12">
                     <use href="./images/sprite.svg#icon-arrow-right-bold"></use>
                 </svg>
-            </button>
-            <button type="button" class="contacts-button">
+            </button></a>
+            <a href=""><button type="button" class="contacts-button">
                 Franchise
                 <svg width="12" height="12">
                     <use href="./images/sprite.svg#icon-arrow-right-bold"></use>
                 </svg>
-            </button>
+            </button></a>
         </div>
     </div>
 
