--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -1,6 +1,6 @@
 <!--HERO-->
 <section class="hero">
-  <div class="container relative">
+  <div class="container relative hero-container">
     <div>
       <h1>ice cream made with <span>passion</span></h1>
       <ul class="hero-list hero-info">
