--- a/src/sass/_footer.scss
+++ b/src/sass/_footer.scss
@@ -1,9 +1,9 @@
 p {
   margin: 0;
 }
-.footer-body {
-  background-color: #84a178;
-}
+// .footer-body {
+//   background-color: #84a178;
+// }
 .footer-title-first {
   font-family: var(--primary-font);
   font-style: normal;
