--- a/src/sass/_reset.scss
+++ b/src/sass/_reset.scss
@@ -3,6 +3,10 @@
   --secondary-font: 'Seymour One', sans-serif;
 }
 
+body {
+  background-color: #84a178;
+}
+
 h1,
 h2,
 h3,
@@ -32,7 +36,6 @@ img {
   width: 480px;
   margin: 0 auto;
   padding: 0 20px;
-  background-color: #84a178;
 
   @media screen and (max-width: 479px) {
     width: 100%;
