--- a/src/sass/_cursor.scss
+++ b/src/sass/_cursor.scss
@@ -16,7 +16,8 @@ html {
   }
 }
 
-a {
+a,
+button {
   cursor: url('../images/cursor/cursor-pointer-@1x.png'), pointer;
 
   @supports (cursor: url('data:image/webp'), pointer) {
