--- a/src/sass/_cursor.scss
+++ b/src/sass/_cursor.scss
@@ -17,7 +17,9 @@ html {
 }
 
 a,
-button {
+button,
+textarea,
+input {
   cursor: url('../images/cursor/cursor-pointer-@1x.png'), pointer;
 
   @supports (cursor: url('data:image/webp'), pointer) {
