--- a/src/sass/_hero.scss
+++ b/src/sass/_hero.scss
@@ -1,18 +1,13 @@
-* {
-  margin: 0;
-  padding: 0;
-}
+// * {
+//   margin: 0;
+//   padding: 0;
+// }
 
 .hero-list {
   display: flex;
   list-style: none;
   padding: 0px;
   margin: 0px;
-}
-
-.hero {
-  min-width: 480px;
-  // padding-top: 40px;
 }
 
 .hero-container {
