--- a/src/sass/_reset.scss
+++ b/src/sass/_reset.scss
@@ -34,8 +34,10 @@ img {
 
 .container {
   width: 480px;
-  margin: 0 auto;
   padding: 0 20px;
+  margin: 0 auto;
+  // padding-left: 15px;
+  // padding-right: 15px;
 
   @media screen and (max-width: 479px) {
     width: 100%;
