--- a/src/partials/customer-reviews.html
+++ b/src/partials/customer-reviews.html
@@ -1,6 +1,6 @@
 
 
-<section class="gallery">
+<section class="customer-reviews">
     <div class="container">
         <div class="swiper mySwiper2">
             <div class="swiper-wrapper">
@@ -48,7 +48,7 @@
         </div>
     </div>
 </section>
-<script>
+<!-- <script>
     var swiper = new Swiper(".mySwiper2", {
         slidesPerView: 1,
         spaceBetween: 30,
@@ -64,4 +64,4 @@
             prevEl: ".swiper-button-prev",
         },
     });
-</script>
+</script> -->
