--- a/src/partials/customer-reviews.html
+++ b/src/partials/customer-reviews.html
@@ -1,10 +1,6 @@
-<!DOCTYPE html>
-<html lang="en">
 
 
-
-
-<section class="gallery">
+<section class="customer-rewiews">
     <div class="container">
         <div class="swiper mySwiper">
             <div class="swiper-wrapper">
