закомител скрипт на swiper

--- a/src/partials/gallery.html
+++ b/src/partials/gallery.html
@@ -46,7 +46,7 @@
             </div>
         </div>
 </section>
-<script>
+<!-- <script>
     var swiper = new Swiper(".mySwiper1", {
         spaceBetween: 30,
         centeredSlides: true,
@@ -63,4 +63,4 @@
             prevEl: ".swiper-button-prev",
         },
     });
-</script>
+</script> -->
