--- a/src/sass/_hero.scss
+++ b/src/sass/_hero.scss
@@ -1,8 +1,3 @@
-// * {
-//   margin: 0;
-//   padding: 0;
-// }
-
 .hero-list {
   display: flex;
   list-style: none;
@@ -175,9 +170,9 @@ h1 span {
     padding-bottom: 52px;
   }
 
-  // .hero {
-  //   padding-top: 14px;
-  // }
+  .hero {
+    padding-top: 14px;
+  }
 
   .hero h1 {
     margin: 0px 0px 24px 0px;
@@ -273,9 +268,9 @@ h1 span {
     padding-bottom: 143px;
   }
 
-  // .hero {
-  //   padding-top: 45px;
-  // }
+  .hero {
+    padding-top: 41px;
+  }
 
   .hero h1,
   .h1 span {
