--- a/src/sass/_modal-read-more.scss
+++ b/src/sass/_modal-read-more.scss
@@ -1,5 +1,7 @@
 
-
+:root {
+    --transition-dur-and-timing-fun: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
 
 .container {
     min-width: 320px;
@@ -15,6 +17,39 @@
     .container {
         max-width: 768px;
     }
+}
+
+
+
+.visually-hidden {
+    position: absolute;
+    white-space: nowrap;
+    width: 1px;
+    height: 1px;
+    overflow: hidden;
+    border: 0;
+    padding: 0;
+    clip: rect(0 0 0 0);
+    clip-path: inset(50%);
+    margin: -1px;
+}
+
+/* style overlay*/
+.overlay {
+    opacity: 0;
+    visibility: hidden;
+
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, .5);
+    z-index: 520;
+    // transition: 1.3s all;
+    transition: opacity var(--transition-dur-and-timing-fun);
+    -webkit-transition: opacity var(--transition-dur-and-timing-fun);
+    -moz-transition: opacity var(--transition-dur-and-timing-fun);
 }
 
 .modal-read {
@@ -44,6 +79,11 @@
 }
 }
 
+.modal.active,
+.overlay.active {
+    opacity: 1;
+    visibility: visible;
+}
 
 .modal-read-title {
     color: #131313;
