--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -1,8 +1,8 @@
 <!--HERO-->
 <section class="hero">
-  <div class="container relative">
+  <div class="container">
     <div>
-      <h1>ice cream made with <span>passion</span></h1>
+      <h1 class="hero-title">ice cream made with <span>passion</span></h1>
       <ul class="hero-list hero-info">
         <li>
           <p class="hero-title-info">16</p>
@@ -28,7 +28,7 @@
         sizes="(min-width: 1200px) 480px, (min-width: 768px) 268px, 218px"
         src="./images/Hero/ice-cream-desktop.svg"
         alt="Big ice
-                  cream"
+                    cream"
         class="hero-ice-cream"
       />
       <img
