--- a/src/sass/_hero.scss
+++ b/src/sass/_hero.scss
@@ -10,25 +10,25 @@
   margin: 0px;
 }
 
+/* // 320 MOBILE */
+
 .hero {
-  min-width: 480px;
-  padding-top: 40px;
+  min-width: 320px;
+  padding-top: 50px;
+  /* background-color: #84a178; */
 }
 
 .container {
-  width: 480px;
+  position: relative;
+  min-width: 320px;
   padding-left: 20px;
   padding-right: 20px;
-  padding-bottom: 150px;
+  padding-bottom: 236px;
   margin-left: auto;
   margin-right: auto;
 }
 
-.relative {
-  position: relative;
-}
-
-.hero h1 {
+.hero-title {
   width: 247px;
   margin: 0px 0px 32px 0px;
   font-family: var(--secondary-font);
@@ -40,7 +40,7 @@
   color: #fcfcfc;
 }
 
-h1 span {
+.hero-title span {
   font-size: 33px;
 }
 
@@ -100,10 +100,10 @@ h1 span {
 
 .hero-ice-cream {
   position: absolute;
-  width: 218px;
-  height: 267px;
+  width: 177px;
+  height: 217px;
   bottom: 0px;
-  right: 20px;
+  right: 60px;
   z-index: 3;
   -webkit-animation-duration: 3s;
   animation-duration: 3s;
@@ -117,7 +117,7 @@ h1 span {
   position: absolute;
   bottom: 0px;
   right: 0;
-  width: 330px;
+  width: 320px;
   z-index: 2;
   -webkit-animation-duration: 3s;
   animation-duration: 3s;
@@ -169,6 +169,32 @@ h1 span {
 .hero-info {
   position: absolute;
   display: none;
+}
+
+/* // 480 MOBILE */
+
+@media screen and (min-width: 480px) {
+  .hero {
+    padding-top: 40px;
+  }
+
+  .container {
+    width: 480px;
+    padding-bottom: 150px;
+  }
+
+  .hero-ice-cream {
+    width: 218px;
+    height: 267px;
+    bottom: 0px;
+    right: 20px;
+  }
+
+  .hero-dots-mobile {
+    bottom: 0px;
+    right: 0;
+    width: 330px;
+  }
 }
 
 /* ============TABLET========== */
@@ -282,8 +308,8 @@ h1 span {
     padding-top: 45px;
   }
 
-  .hero h1,
-  .h1 span {
+  .hero-title,
+  .hero-title span {
     font-size: 38px;
     line-height: 48px;
   }
