--- a/src/partials/gallery.html
+++ b/src/partials/gallery.html
@@ -1,11 +1,11 @@
 
 <section class="gallery">
     <div class="container">
-        <h2 class="visual-hidden">gallery</h2>
-        <div class="swiper mySwiper1 gallery-swiper">
+        <h2 class="gallery-visual-hidden">gallery</h2>
+        <div class=" mySwiper1 gallery-swiper">
             <div class="swiper-wrapper">
-                <div class="swiper-slide">
-                    <img class="icecream" srcset="
+                <div class="gallery-swiper-slide">
+                    <img class="gallery-icecream" srcset="
                                                         ../images/gallery/mob-gallery-1-@1x-280.jpg 280w,
                                                         ../images/gallery/mob-gallery-1-@1x-480.jpg 480w,
                                                         ../images/gallery/mob-gallery-1-@2x-560.jpg 560w,
@@ -17,8 +17,8 @@
                                                         " sizes="100vw"
                         src="../images/gallery/desk-gallery-1-@1x-1013.jpg" alt="Мороженко1">
                 </div>
-                <div class="swiper-slide">
-                    <img class="icecream" srcset="
+                <div class="gallery-swiper-slide">
+                    <img class="gallery-icecream" srcset="
                                                         ../images/gallery/mob-gallery-2-@1x-280.jpg 280w,
                                                         ../images/gallery/mob-gallery-2-@1x-480.jpg 480w,
                                                         ../images/gallery/mob-gallery-2-@2x-560.jpg 560w,
@@ -30,8 +30,8 @@
                                                         " sizes="100vw"
                         src="../images/gallery/desk-gallery-2-@1x-1013.jpg" alt="Мороженко2">
                 </div>
-                <div class="swiper-slide">
-                    <img class="icecream" srcset="
+                <div class="gallery-swiper-slide">
+                    <img class="gallery-icecream" srcset="
                                                         ../images/gallery/mob-gallery-3-@1x-280.jpg 280w,
                                                         ../images/gallery/mob-gallery-3-@1x-480.jpg 480w,
                                                         ../images/gallery/mob-gallery-3-@2x-560.jpg 560w,
