--- a/src/sass/_gallery.scss
+++ b/src/sass/_gallery.scss
@@ -1,5 +1,5 @@
 
-    .visual-hidden {
+    .gallery-visual-hidden {
         position: absolute;
         white-space: nowrap;
         width: 1px;
@@ -12,12 +12,12 @@
         margin: -1px;
     }
 
-    .swiper {
+    .gallery-swiper{
         width: 100%;
         height: 100%;
     }
 
-    .swiper-slide {
+    .gallery-swiper-slide {
         text-align: center;
         font-size: 18px;
         background: #fff;
@@ -37,14 +37,14 @@
         align-items: center;
     }
 
-    .swiper-slide img {
+    .gallery-swiper-slide img {
         display: block;
         width: 100%;
         height: 100%;
         object-fit: cover;
     }
 
-    .icecream {
+    .gallery-icecream {
         border-radius: 18px;
     }
 
@@ -62,7 +62,7 @@
 
 /* -desctop- */
 @media screen and (min-width: 1200px) {
-    .icecream {
+    .gallery-icecream {
         border-radius: 24px;
     }
 
